# radar

./: .gitignore  README.md  pyproject.toml  test.sh
.github/workflows/: build.yml
analysis/: download.py  pyproject.toml  significance.py
radar/: config-runner.yaml  config-server.yaml  config.yaml  config.yml  pom.xml
radar-ui/: .prettierignore  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.lint.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
radar-ui/src/: App.vue  api.ts  main.ts  style.css
radar-ui/src/api/: adminEnqueue.ts  adminMaintain.ts  adminRecomputeSignificance.ts  adminRepoMetrics.ts  adminRepoMetricsDelete.ts  adminRepoMetricsRename.ts  adminResetRssBotState.ts  adminVacuum.ts  commit.ts  commitRun.ts  compare.ts  info.ts  queue.ts  queueRun.ts  repoGithubBot.ts  repoGraph.ts  repoHistory.ts  repoMetrics.ts  repoNameCommitsChash.ts  repoNameHistory.ts  repos.ts  reposHistory.ts  reposRepoCommitsChash.ts  reposRepoHistory.ts  runs.ts  types.ts  utils.ts
radar-ui/src/components/: CBrutzelBox.vue  CButton.vue  CColorMode.vue  CCommitDetails.vue  CCommitDetailsMessage.vue  CCommitHash.vue  CCommitMeasurementsTable.vue  CControl.vue  CControlFilter.vue  CControlPages.vue  CControlRow.vue  CDeltaAmount.vue  CDeltaPercent.vue  CHeading1.vue  CHeading2.vue  CLinkCommit.vue  CLinkCommitHash.vue  CLinkRepo.vue  CListItem.vue  CLoading.vue  CLogs.vue  CNavbar.vue  CPlural.vue  (+19 more)
scripts/: build  deploy  deploy-runner  deploy-server  fmt  fmt-check
scripts/analysis/: analyse.typ  analyze.py  download.py
(+295 files in other folders)
