[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "requests>=2.32.5",
    "ruptures>=1.1.10",
]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
